# amwater-api

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: endpoints.txt  swagger-docs.json
handoff/: ACTIVE.md
handoff/archive/: CLAUDE-active-20260718.md
src/amwater_api/: __init__.py  client.py  exceptions.py
