[tool.poetry]
name = "amwater-api"
version = "0.1.0"
description = "Async Python library for scraping water usage and bill data from the Illinois American Water portal"
authors = ["Robert Scheib <robert@scheib.email>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "amwater_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
